--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen GIF</title>
+    <title>Pearl</title>
     <style>
         body, html {
             margin: 0;
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-color: black; /* Optional: to fill the screen with black when the gif is smaller than the screen */
+            background-color: f9fae9; /* Optional: to fill the screen with black when the gif is smaller than the screen */
         }
         .gif-container {
             position: relative;
