--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-color: f9fae9; /* Optional: to fill the screen with black when the gif is smaller than the screen */
+            background-color: #f9fae9; /* Ensure correct hex format for background color */
         }
         .gif-container {
             position: relative;
             width: 100%;
-            height: 100%;
+            max-width: 100vw; /* Ensure it doesn't exceed the viewport width */
+            height: auto; /* Adjust to content */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .gif-container img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            min-width: 100%;
-            min-height: 100%;
+            width: 100%;
+            height: auto;
             object-fit: cover;
+            background-color: #f9fae9; /* Same as body background color for borders */
+            padding-top: 20px; /* Adjust top padding for border effect */
+            padding-bottom: 20px; /* Adjust bottom padding for border effect */
         }
         .social-icons {
             position: absolute;
@@ -47,8 +50,11 @@
         }
         @media (max-width: 600px) {
             .gif-container img {
-                min-width: 150%;
-                min-height: 150%;
+                width: 100vw;
+                height: auto;
+                object-fit: cover;
+                padding-top: 20px; /* Adjust top padding for border effect */
+                padding-bottom: 20px; /* Adjust bottom padding for border effect */
             }
         }
     </style>
