--- a/index.html
+++ b/index.html
@@ -11,63 +11,68 @@
             height: 100%;
             width: 100%;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
-            background-color: #f9fae9; /* Ensure correct hex format for background color */
+            background-color: #f8fde9; /* Ensure correct hex format for background color */
         }
         .gif-container {
             position: relative;
-            width: 100%;
-            max-width: 100vw; /* Ensure it doesn't exceed the viewport width */
-            height: auto; /* Adjust to content */
+            width: auto;
+            max-width: 90vh;
+            height: 80vh; /* 80% of the viewport height */
+            max-height: 80vh; /* Ensure it doesn't exceed 80% of the viewport height */
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: #f8fde9;
         }
         .gif-container img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            background-color: #f9fae9; /* Same as body background color for borders */
-            padding-top: 20px; /* Adjust top padding for border effect */
-            padding-bottom: 20px; /* Adjust bottom padding for border effect */
+            max-width: 100%;
+            width: auto; /* Maintain aspect ratio */
         }
         .social-icons {
-            position: absolute;
-            bottom: 20px;
+            margin-top: 20px;
             width: 100%;
             text-align: center;
         }
         .social-icons a {
-            color: white;
+            color: #c5c9b5; /* Changed to black for better visibility */
             font-size: 24px;
             margin: 0 10px;
             text-decoration: none;
         }
         .social-icons a:hover {
-            color: #ddd;
+            color: #7475b0;
         }
         @media (max-width: 600px) {
-            .gif-container img {
-                width: 100vw;
+            .gif-container {
                 height: auto;
-                object-fit: cover;
-                padding-top: 20px; /* Adjust top padding for border effect */
-                padding-bottom: 20px; /* Adjust bottom padding for border effect */
+                max-height: 100vh; /* Ensure it doesn't exceed 100% of the viewport height */
+                width: 100vw; /* Fit within the viewport width */
             }
+            .gif-container img {
+                max-width: 100%;
+                height: auto; /* Maintain aspect ratio */
+            }
+            .social-icons {
+            margin-top: 50%;
+            width: 100%;
+            text-align: center;
         }
+    }
+        
     </style>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="gif-container">
         <img src="PearlFontsShuffle.gif" alt="Fullscreen GIF">
-        <div class="social-icons">
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        </div>
+    </div>
+    <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
     </div>
 </body>
 </html>
