--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <img src="PearlFontsShuffle.gif" alt="Fullscreen GIF">
     </div>
     <div class="social-icons">
-        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/pearlit.xyz/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <!-- <a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a> -->
     </div>
 </body>
 </html>
