--- a/about.html
+++ b/about.html
@@ -49,6 +49,21 @@
         .typing-container {
             white-space: pre-wrap; /* Preserve spaces and line breaks */
         }
+        @media (max-width: 600px) {
+            .navbar {
+                top: 5px;
+                left: 5px;
+                padding: 5px 0;
+            }
+            .navbar a {
+                font-size: 16px;
+                margin: 0 10px;
+            }
+            .content {
+                font-size: 24pt; /* Adjust font size for mobile */
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
