--- a/about.html
+++ b/about.html
@@ -27,6 +27,36 @@
             text-align: left;
             padding: 10px 0;
         }
+        .dropdown {
+            display: inline-block;
+            position: relative;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f8fde9;
+            z-index: 1;
+        }
+        .dropdown-content a {
+            color: #c5c9b5;
+            padding: 10px 15px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+            font-size: 16px;
+        }
+        .dropdown-content a:hover {
+            background-color: #f0f0f0;
+            color: #7475b0;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block;
+            animation: fadeIn 0.3s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
         .navbar a {
             color: #c5c9b5;
             font-size: 18px;
@@ -68,7 +98,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="index.html">go back</a>
+        <a href="https://pearlit.xyz/">home</a>
+        <div class="dropdown">
+            <a href="https://pearlit.xyz/articles">articles</a>
+            <div class="dropdown-content">
+                <a href="https://pearlit.xyz/articles">music</a>
+                <a href="https://pearlit.xyz/articles">policy</a>
+                <a href="https://pearlit.xyz/articles">fashion</a>
+                <a href="https://pearlit.xyz/articles">history</a>
+            </div>
+        </div>
     </div>
     <div class="content">
         <div class="typing-container" id="typing-container"></div>
