--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
         .navbar a:hover {
             color: #7475b0;
         }
+        .dropdown {
+            display: inline-block;
+            position: relative;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f8fde9;
+            z-index: 1;
+        }
+        .dropdown-content a {
+            color: #c5c9b5;
+            padding: 10px 15px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+            font-size: 16px;
+        }
+        .dropdown-content a:hover {
+            background-color: #f0f0f0;
+            color: #7475b0;
+        }
+        .dropdown:hover .dropdown-content {
+            display: block;
+            animation: fadeIn 0.3s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
         .gif-container {
             position: relative;
             width: auto;
@@ -81,6 +111,15 @@
 <body>
     <div class="navbar">
         <a href="https://pearlit.xyz/about">about</a>
+        <div class="dropdown">
+            <a href="javascript:void(0)">articles</a>
+            <div class="dropdown-content">
+                <a href="#">music</a>
+                <a href="#">policy</a>
+                <a href="#">fashion</a>
+                <a href="#">history</a>
+            </div>
+        </div>
     </div>
     <div class="gif-container">
         <img src="PearlFontsShuffle.gif" alt="Fullscreen GIF">
