--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
     <div class="navbar">
         <a href="https://pearlit.xyz/about">about</a>
         <div class="dropdown">
-            <a href="javascript:void(0)">articles</a>
+            <a href="https://pearlit.xyz/articles">articles</a>
             <div class="dropdown-content">
-                <a href="#">music</a>
-                <a href="#">policy</a>
-                <a href="#">fashion</a>
-                <a href="#">history</a>
+                <a href="https://pearlit.xyz/articles">music</a>
+                <a href="https://pearlit.xyz/articles">policy</a>
+                <a href="https://pearlit.xyz/articles">fashion</a>
+                <a href="https://pearlit.xyz/articles">history</a>
             </div>
         </div>
     </div>
