--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 max-width: 100%;
                 height: auto; /* Maintain aspect ratio */
             }
+            .social-icons {
+            margin-top: 40px;
+        }
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
