--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         .gif-container img {
             max-width: 100%;
             width: auto; /* Maintain aspect ratio */
+            justify-content: center;
+            align-items: center;
         }
         .social-icons {
             margin-top: 20px;
