--- a/about.html
+++ b/about.html
@@ -108,6 +108,7 @@
                 <a href="https://pearlit.xyz/articles">history</a>
             </div>
         </div>
+        <a href="https://chatbot-template-kyx2myiqu1.streamlit.app/" target="_blank">ai</a>
     </div>
     <div class="content">
         <div class="typing-container" id="typing-container"></div>
