--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <a href="https://pearlit.xyz/articles">fashion</a>
                 <a href="https://pearlit.xyz/articles">history</a>
             </div>
+        <a href="https://chatbot-template-kyx2myiqu1.streamlit.app/" target="_blank">ai</a>
         </div>
     </div>
     <div class="gif-container">
