--- a/articles.html
+++ b/articles.html
@@ -100,6 +100,7 @@
     <div class="navbar">
         <a href="https://pearlit.xyz/">home</a>
         <a href="https://pearlit.xyz/about">about</a>
+        <a href="https://chatbot-template-kyx2myiqu1.streamlit.app/" target="_blank">ai</a>
         </div>
     </div>
     <div class="content">
